cmake_minimum_required(VERSION 3.10)
cmake_policy(SET CMP0074 NEW)

project(font_demo)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY .)
set(LIBRARY_OUTPUT_PATH .)

if(WIN32 AND NOT MINGW)
	error("linux only")
endif()
set( CMAKE_CXX_FLAGS "-std=c++1z")
if(CMAKE_BUILD_TYPE MATCHES "Debug")
	add_compile_options("-g")
	add_definitions(-D__debug__)
endif()

find_package(PkgConfig REQUIRED)
pkg_check_modules(FT REQUIRED freetype2)
include_directories(${FT_INCLUDE_DIRS})
link_directories(${FT_LIBRARY_DIRS})
list(APPEND FC_DEP_LIBS ${FT_LIBRARIES})
pkg_check_modules(GTK2 REQUIRED gtk+-2.0)
include_directories(${GTK2_INCLUDE_DIRS})
link_directories(${GTK2_LIBRARY_DIRS})
list(APPEND FC_DEP_LIBS ${GTK2_LIBRARIES})
pkg_check_modules(GTH2 REQUIRED gthread-2.0)
include_directories(${GTH2_INCLUDE_DIRS})
link_directories(${GTH2_LIBRARY_DIRS})
list(APPEND FC_DEP_LIBS ${GTH2_LIBRARIES})
list(APPEND FC_DEP_LIBS spes png jpeg xcb pthread)

add_subdirectory(ft_exp2)
add_subdirectory(ft_exp5)
add_subdirectory(ft1)
add_subdirectory(ft2)
add_subdirectory(g2n)
add_subdirectory(to_svg)
add_subdirectory(ft3)
add_subdirectory(ft4)
add_subdirectory(tiny_sdf)
